<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/baumans"
            android:text="@string/update_wager"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/wager_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            android:autofillHints=""
            android:background="@drawable/dialog_et"
            android:ems="10"
            android:fontFamily="@font/baumans"
            android:hint="@string/wager_amount"
            android:inputType="numberDecimal"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/edit_wager_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/baumans"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:rippleColor="#FDD835"
            app:strokeColor="#FDD835" />
    </LinearLayout>
</androidx.cardview.widget.CardView>