<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".ui.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:fontFamily="@font/croissant_one"
            android:text="@string/add_parlay_legs"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textColorHint="@color/text_color"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/selection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edit_text_stroke"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/selection_s_name"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="6dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="6dp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="#80FBA342"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_wager_amount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_stroke"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/wager_amount"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:paddingLeft="24dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingRight="24dp"
            android:paddingBottom="6dp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="#80FBA342"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/input_leg_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_stroke_bottom_top"
                android:fontFamily="@font/bubblegum_sans"
                android:hint="@string/leg_title"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingLeft="24dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="6dp"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textColorHint="#80FBA342"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/input_american_odds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_stroke_top_bottom"
                android:fontFamily="@font/bubblegum_sans"
                android:hint="@string/american_odds"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingLeft="24dp"
                android:paddingTop="6dp"
                android:paddingEnd="12dp"
                android:paddingRight="24dp"
                android:paddingBottom="6dp"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textColorHint="#80FBA342"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="@font/bubblegum_sans"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:text="@string/add"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:cornerRadius="16dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/bannerAdView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>