<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/color_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/baumans"
            android:text="@string/add_new_leg_to_your_selection"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/leg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/dialog_et"
            android:ems="10"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/leg_s_title"
            android:inputType="textPersonName"
            android:paddingLeft="24dp"
            android:paddingTop="6dp"
            android:paddingRight="24dp"
            android:paddingBottom="6dp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="#BF052339"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading" />

        <EditText
            android:id="@+id/american_odds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/dialog_et"
            android:ems="10"
            android:fontFamily="@font/bubblegum_sans"
            android:hint="@string/americal_odds"
            android:inputType="phone"
            android:paddingLeft="24dp"
            android:paddingTop="6dp"
            android:paddingRight="24dp"
            android:paddingBottom="6dp"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textColorHint="#BF052339"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/leg_title"
            app:layout_constraintStart_toStartOf="@+id/leg_title"
            app:layout_constraintTop_toBottomOf="@+id/leg_title" />

        <Button
            android:id="@+id/add_selection_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/add_now"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/american_odds"
            app:layout_constraintStart_toStartOf="@+id/american_odds"
            app:layout_constraintTop_toBottomOf="@+id/american_odds" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>